--- a/My Crazy Night/src/main/res/layout/fragment_main.xml
+++ b/My Crazy Night/src/main/res/layout/fragment_main.xml
@@ -9,9 +9,13 @@
     tools:context="com.epicdynasty.mycrazynight.MainActivity$PlaceholderFragment">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text="My Crazy Night"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/welcome" />
+        android:id="@+id/welcome"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-thin"
+        android:textSize="50dp" />
 
 </RelativeLayout>
